# weather-mcp

./: README.md  print_output.sh
mcp-client-python/: client.py  old-client.py  pyproject.toml  requirements.txt
mcp-client-python/llm/: anthropic.py  base.py  factory.py  ollama.py  ollamaProvider.py
tests/: README.md  smoke-test.sh  utils.sh
tests/helpers/: mcp-test-client.ts  mock-mcp-server.ts  package-lock.json  package.json  tsconfig.json
